--- a/.muttrc
+++ b/.muttrc
@@ -12,9 +12,11 @@ source ~/.mutt/airinov
 # =============== Reading
 auto_view text/html
 alternative_order text/plain text/html
+set sort = 'reverse-threads'
+set sort_aux = 'last-date-received'
 
 # =============== Composition
-set editor = "`echo $EDITOR`"
+set editor = "$EDITOR"
 set edit_headers = yes  # See the headers when editing
 set charset = UTF-8     # value of $LANG; also fallback for send_charset
 # Sender, email address, and sign-off line must match
