[crypto] Select default key and self-encrypt by default

--- a/.gnupg/gpg.conf
+++ b/.gnupg/gpg.conf
@@ -1,7 +1,5 @@
-#default-key 621CC013
-#default-recipient some-user-id
-#default-recipient-self
-
+default-key 26B1FA94
+default-recipient-self
 
 # GnuPG can automatically locate and retrieve keys as needed using
 # this option.  This happens when encrypting to an email address (in
