Put git user details in a different file and source it
This makes it easier for other people to use these dotfiles

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,7 +1,3 @@
-[user]
-    name = M. Domenzain
-    email = ld@airinov.fr
-	signingkey = 9DC929BC
 [alias]
     ci = commit
     co = checkout
@@ -36,3 +32,7 @@
     tool = vimdiff
     conflictstyle = diff3
     algorithm = patience
+[rerere]
+    enabled = true
+[include]
+    path = ~/.gitlocal
