Do not use dane for gpg
Pig slow

--- a/.gnupg/gpg.conf
+++ b/.gnupg/gpg.conf
@@ -9,7 +9,7 @@ default-recipient-self
 # is "--auto-key-locate local" to search for keys only in the local
 # key database.  Uncomment the next line to locate a missing key using
 # two DNS based mechanisms.
-auto-key-locate local,pka,dane
+auto-key-locate local, pka
 
 # Common options for keyserver functions:
 # (Note that the --keyserver option has been moved to dirmngr.conf)
