--- a/.config/systemd/user/emacs.service
+++ b/.config/systemd/user/emacs.service
@@ -2,8 +2,7 @@
 Description=Emacs: the extensible, self-documenting text editor
 
 [Service]
-Type=forking
-ExecStart=/usr/bin/emacs --daemon
+ExecStart=/usr/bin/emacs --fg-daemon
 ExecStop=/usr/bin/emacsclient --eval "(kill-emacs)"
 Environment=SSH_AUTH_SOCK=%t/keyring/ssh DISPLAY=:0
 Restart=always
