--- a/.gitconfig
+++ b/.gitconfig
@@ -41,3 +41,9 @@
 	enabled = true
 [include]
 	path = ~/.gitlocal
+[magithub]
+	online = false
+[magithub "status"]
+	includeStatusHeader = false
+	includePullRequestsSection = false
+	includeIssuesSection = false
