Automatically encrypt to self

--- a/.gnupg/gpg.conf
+++ b/.gnupg/gpg.conf
@@ -76,3 +76,5 @@ no-greeting
 no-emit-version
 personal-cipher-preferences AES256 AES192 AES
 personal-digest-preferences SHA512 SHA384 SHA256 SHA224
+
+encrypt-to luis.domenzain@parrot.com
