expose `SSH_AUT_SOCK` to emacs

--- a/.config/systemd/user/emacs.service
+++ b/.config/systemd/user/emacs.service
@@ -3,8 +3,9 @@ Description=Emacs: the extensible, self-documenting text editor
 Documentation=man:emacs(1) info:Emacs
 
 [Service]
-ExecStart=/bin/bash -l -c 'exec /bin/emacs --fg-daemon'
+ExecStart=/bin/emacs --fg-daemon
 ExecStop=/bin/emacsclient --eval "(kill-emacs)"
+Environment=SSH_AUTH_SOCK=%t/keyring/ssh
 Restart=always
 TimeoutStartSec=0
 
