--- a/.gitconfig
+++ b/.gitconfig
@@ -40,6 +40,7 @@
 	defaultBranch = main
 [rebase]
 	autoStash = true
+	updateRefs = true
 [submodule]
 	stickyRecursiveClone = true
 	recurse = true
